--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,8 @@ Thumbs.db
 .amplify
 amplify_outputs*
 amplifyconfiguration*
+
+# Environment files
+/src/environments/environment.ts
+/src/environments/environment.prod.ts
+.env
