--- a/amplify.yml
+++ b/amplify.yml
@@ -1,23 +1,17 @@
 version: 1
-backend:
-  phases:
-    build:
-      commands:
-        - npm ci --cache .npm --prefer-offline
-        - npx ampx pipeline-deploy --branch $AWS_BRANCH --app-id $AWS_APP_ID
 frontend:
   phases:
     preBuild:
       commands:
-        - npx ng version
+        - npm ci
+        - npm install -g @angular/cli
     build:
       commands:
-        - npx ng build --configuration=production
+        - ng build --configuration production
   artifacts:
-    baseDirectory: dist/amplify-angular-template/browser
+    baseDirectory: dist/amplify-caas
     files:
       - '**/*'
   cache:
     paths:
-      - .npm/**/*
       - node_modules/**/*
